--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -51,7 +51,8 @@
   }
 
   &:hover {
-    background-color: $yellow;
-    color: $teal-4;
+    background-color: $beige;
+    border-color: $beige;
+    color: $teal-5;
   }
 }
