Update styling for home sections

--- a/src/styles/Skill.scss
+++ b/src/styles/Skill.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transition: opacity 0.5s ease;
 
   &__icon {
     display: flex;
@@ -23,7 +24,6 @@
 
     &-pic {
       max-width: 64px;
-      opacity: 0.6;
     }
   }
 
@@ -42,11 +42,13 @@
           filter: blur(10px);
           z-index: -1;
         }
-
-        &-pic {
-          opacity: 1;
-        }
       }
     }
+  }
+}
+
+.Home__section-info-skills:has(.Skill:hover) {
+  .Skill:not(:hover) {
+    opacity: 0.5;
   }
 }
