--- a/src/styles/Job.scss
+++ b/src/styles/Job.scss
@@ -1,6 +1,7 @@
 .Job {
   width: 100%;
   margin: 24px 0;
+  transition: opacity 0.5s ease;
 
   &__heading {
     display: flex;
@@ -10,5 +11,11 @@
     &-company {
       font-weight: $font-weight-heavy;
     }
+  }
+}
+
+.Home__section-info-jobs:has(.Job:hover) {
+  .Job:not(:hover) {
+    opacity: 0.5;
   }
 }
