Improve landing animation

--- a/src/styles/Logo.scss
+++ b/src/styles/Logo.scss
@@ -29,15 +29,15 @@
     .Logo {
       &__left {
         opacity: 0;
-        animation: slide-left-rotate 2.6s ease;
-        animation-delay: 800ms;
+        animation: slide-left-rotate 3s ease;
+        animation-delay: 1s;
         animation-fill-mode: forwards;
       }
 
       &__right {
         opacity: 0;
-        animation: slide-right-rotate 2.6s ease;
-        animation-delay: 800ms;
+        animation: slide-right-rotate 3s ease;
+        animation-delay: 1s;
         animation-fill-mode: forwards;
       }
     }
