--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -57,15 +57,21 @@ $z-layer-body: 200;
 $z-layer-blob: 100;
 
 @mixin box-shadow {
-  -webkit-box-shadow: -8px 16px 16px 4px rgba(0,0,0,0.5);
-  -moz-box-shadow: -8px 16px 16px 4px rgba(0,0,0,0.5);
-  box-shadow: -8px 16px 16px 4px rgba(0,0,0,0.5);
+  -webkit-box-shadow: -4px 8px 8px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: -4px 8px 8px 0px rgba(0,0,0,0.3);
+  box-shadow: -4px 8px 8px 0px rgba(0,0,0,0.3);
+}
+
+@mixin box-shadow-button-pressed {
+  -webkit-box-shadow: -2px 6px 6px 0px rgba(0,0,0,0.6);
+  -moz-box-shadow: -2px 6px 6px 0px rgba(0,0,0,0.6);
+  box-shadow: -2px 6px 6px 0px rgba(0,0,0,0.6);
 }
 
 @mixin box-shadow-light {
-  -webkit-box-shadow: -8px 16px 16px 4px rgba(0,0,0,0.1);
-  -moz-box-shadow: -8px 16px 16px 4px rgba(0,0,0,0.1);
-  box-shadow: -8px 16px 16px 4px rgba(0,0,0,0.1);
+  -webkit-box-shadow: -4px 8px 8px 0px rgba(0,0,0,0.1);
+  -moz-box-shadow: -4px 8px 8px 0px rgba(0,0,0,0.1);
+  box-shadow: -4px 4px 8px 0px rgba(0,0,0,0.1);
 }
 
 @mixin box-shadow-heavy {
