--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -237,7 +237,7 @@
     &-socials-container {
       .Home__section-link--icon {
         margin: 0 8px;
-        font-size: $font-size-xxl;
+        font-size: $font-size-xxxl;
       }
     }
   }
