--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,7 +47,8 @@ $font-size-sm: 14px;
 $font-size-md: 16px;
 $font-size-lg: 18px;
 $font-size-xl: 20px;
-$font-size-xxl: 24px;
+$font-size-xxl: 22px;
+$font-size-xxxl: 24px;
 $font-size-icon: 32px;
 $font-size-subheading: 40px;
 $font-size-heading: 80px;
