--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -9,6 +9,7 @@
   transition: all 0.3s ease;
   user-select: none;
   min-width: 200px;
+  cursor: pointer;
 
   &--in-progress {
     border-style: dashed;
