Ensure blob blur works on safari and firefox

--- a/src/styles/Blob.scss
+++ b/src/styles/Blob.scss
@@ -15,6 +15,7 @@
     height: 100%;
     position: absolute;
     backdrop-filter: blur(80px);
+    -webkit-backdrop-filter: blur(80px);
   }
 
   &-Container {
