--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -9,7 +9,10 @@
   transition: all 0.3s ease;
   user-select: none;
   min-width: 200px;
-  cursor: pointer;
+  
+  &--clickable {
+    cursor: pointer;
+  }
 
   &--in-progress {
     border-style: dashed;
