--- a/src/styles/Tooltip.scss
+++ b/src/styles/Tooltip.scss
@@ -1,88 +1,88 @@
 .Tooltip {
-  &-Container {
-    position: relative;
-    display: inline-block;
-  }
+	&-Container {
+		position: relative;
+		display: inline-block;
+	}
 
-  &__tooltip {
-    position: absolute;
-    border-radius: $border-radius-box-small;
-    padding: 4px 8px;
-    background: black;
-    color: white;
-    min-width: 140px;
-    text-align: center;
-    visibility: visible;
-    opacity: 1;
-    z-index: 1;
-    
-    &:after {
-      content: " ";
-      position: absolute;
-      border-width: 4px;
-      border-style: solid;
-    }
+	&__tooltip {
+		position: absolute;
+		border-radius: $border-radius-box-small;
+		padding: 4px 8px;
+		background: black;
+		color: white;
+		min-width: 140px;
+		text-align: center;
+		visibility: visible;
+		opacity: 1;
+		z-index: 1;
 
-    &:hover {
-      opacity: 1 !important;
-      visibility: visible !important;
-    }
+		&:after {
+			content: ' ';
+			position: absolute;
+			border-width: 4px;
+			border-style: solid;
+		}
 
-    &--hide {
-      opacity: 0;
-      visibility: hidden;
-    }
+		&:hover {
+			opacity: 1 !important;
+			visibility: visible !important;
+		}
 
-    &--top {
-      top: -8px;
-      left: 50%;
-      transform: translate(-50%, -100%);
+		&--hide {
+			opacity: 0;
+			visibility: hidden;
+		}
 
-      &:after {
-        top: 100%;
-        left: 50%;
-        transform: translateX(-50%);
-        border-color: black transparent transparent transparent;
-      }
-    }
-  
-    &--right {
-      top: 50%;
-      left: calc(100% + 8px);
-      transform: translate(0, -50%);
-      
-      &:after {
-        top: 50%;
-        left: 0;
-        transform: translate(-100%, -50%);
-        border-color: transparent black transparent transparent;
-      }
-    }
+		&--top {
+			top: -8px;
+			left: 50%;
+			transform: translate(-50%, -100%);
 
-    &--bottom {
-      top: calc(100% + 8px);
-      left: 50%;
-      transform: translate(-50%, 0%);
+			&:after {
+				top: 100%;
+				left: 50%;
+				transform: translateX(-50%);
+				border-color: black transparent transparent transparent;
+			}
+		}
 
-      &:after {
-        top: 0%;
-        left: 50%;
-        transform: translate(-50%, -100%);
-        border-color: transparent transparent black transparent;
-      }
-    }
-  
-    &--left {
-      top: 50%;
-      left: calc(0% - 8px);
-      transform: translate(-100%, -50%);
+		&--right {
+			top: 50%;
+			left: calc(100% + 8px);
+			transform: translate(0, -50%);
 
-      &:after {
-        top: 50%;
-        left: 100%;
-        transform: translateY(-50%);
-        border-color: transparent transparent transparent black;
-      }
-    }
-  }
+			&:after {
+				top: 50%;
+				left: 0;
+				transform: translate(-100%, -50%);
+				border-color: transparent black transparent transparent;
+			}
+		}
+
+		&--bottom {
+			top: calc(100% + 8px);
+			left: 50%;
+			transform: translate(-50%, 0%);
+
+			&:after {
+				top: 0%;
+				left: 50%;
+				transform: translate(-50%, -100%);
+				border-color: transparent transparent black transparent;
+			}
+		}
+
+		&--left {
+			top: 50%;
+			left: calc(0% - 8px);
+			transform: translate(-100%, -50%);
+
+			&:after {
+				top: 50%;
+				left: 100%;
+				transform: translateY(-50%);
+				border-color: transparent transparent transparent black;
+			}
+		}
+	}
 }
