Formatting ./src/styles/Blob.scss

--- a/src/styles/Blob.scss
+++ b/src/styles/Blob.scss
@@ -1,30 +1,26 @@
 .Blob {
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  background: linear-gradient(
-    to right,
-    $teal-3,
-    transparentize($yellow, 0.5),
-  );
-  pointer-events: none;
-  animation: rotate360 16s linear infinite;
+	position: absolute;
+	width: 500px;
+	height: 500px;
+	background: linear-gradient(to right, $teal-3, transparentize($yellow, 0.5));
+	pointer-events: none;
+	animation: rotate360 16s linear infinite;
 
-  &__blur {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backdrop-filter: blur(80px);
-    -webkit-backdrop-filter: blur(80px);
-  }
+	&__blur {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		backdrop-filter: blur(80px);
+		-webkit-backdrop-filter: blur(80px);
+	}
 
-  &-Container {
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    background: transparent;
-  }
+	&-Container {
+		height: 100vh;
+		width: 100vw;
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 0;
+		background: transparent;
+	}
 }
