--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -18,69 +18,73 @@
 @import './Tooltip';
 
 :root {
-  font-family: $font-family-regular;
-  line-height: 1.5;
-  font-weight: $font-weight-regular;
+	font-family: $font-family-regular;
+	line-height: 1.5;
+	font-weight: $font-weight-regular;
 
-  color-scheme: light dark;
-  color: $body-color;
-  background-color: $dark-gray;
+	color-scheme: light dark;
+	color: $body-color;
+	background-color: $dark-gray;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  font-family: $font-family-regular;
+	font-family: $font-family-regular;
 }
 
 a {
-  font-weight: $font-weight-regular;
-  color: $yellow;
-  text-decoration: none;
-  position: relative;
+	font-weight: $font-weight-regular;
+	color: $yellow;
+	text-decoration: none;
+	position: relative;
 
-  &:after {
-    bottom: -12px;
-    content: "";
-    display: block;
-    height: 1px;
-    left: 50%;
-    position: absolute;
-    background: $beige;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    width: 0;
-  }
+	&:after {
+		bottom: -12px;
+		content: '';
+		display: block;
+		height: 1px;
+		left: 50%;
+		position: absolute;
+		background: $beige;
+		transition: width 0.3s ease 0s, left 0.3s ease 0s;
+		width: 0;
+	}
 
-  &:hover {
-    color: $beige;
-  
-    &:after {
-      width: 100%; 
-      left: 0;
-    }
-  }
+	&:hover {
+		color: $beige;
+
+		&:after {
+			width: 100%;
+			left: 0;
+		}
+	}
 }
 
 p {
-  margin: 0;
+	margin: 0;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
-  background-color: $dark-gray;
+	margin: 0;
+	display: flex;
+	min-width: 320px;
+	min-height: 100vh;
+	background-color: $dark-gray;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+	font-size: 3.2em;
+	line-height: 1.1;
 }
 
-h1, h2, h3, h4, h5 {
-  margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5 {
+	margin: 0;
 }
